--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,33 +1,51 @@
-# Files in the config/locales directory are used for internationalization
-# and are automatically loaded by Rails. If you want to use locales other
-# than English, add the necessary files in this directory.
-#
-# To use the locales, use `I18n.t`:
-#
-#     I18n.t 'hello'
-#
-# In views, this is aliased to just `t`:
-#
-#     <%= t('hello') %>
-#
-# To use a different locale, set it with `I18n.locale`:
-#
-#     I18n.locale = :es
-#
-# This would use the information in config/locales/es.yml.
-#
-# The following keys must be escaped otherwise they will not be retrieved by
-# the default I18n backend:
-#
-# true, false, on, off, yes, no
-#
-# Instead, surround them with single quotes.
-#
-# en:
-#   'true': 'foo'
-#
-# To learn more, please read the Rails Internationalization guide
-# available at http://guides.rubyonrails.org/i18n.html.
-
 en:
-  hello: "Hello world"
+  cart: 'Cart'
+  cart_is_empty: 'Cart is empty!'
+  price: 'Price'
+  quantity: 'Quantity'
+  product: ' Product'
+  subtotal: 'SubTotal:'
+  coupon: 'Coupon:'
+  wrong_coupon: 'Wrong coupon!'
+  total: 'Total'
+  shipping: 'Shipping Price'
+  enter_coupon: 'Enter coupon:'
+  coupon_field_placeholder: 'Enter Coupon Code'
+  update_cart: 'Update cart'
+  order_summary: 'Order Summary'
+  checkout: 'Checkout'
+  billing_address: 'Billing Address'
+  all_filds_requeried: ' All fields are required!'
+  shipping_address: 'Shipping Address'
+  first_name: 'First Name'
+  last_name: 'Last Name'
+  address: 'Address'
+  city: 'City'
+  zip: 'Zip'
+  country: 'Country'
+  select_country: 'Select Country'
+  phone_placeholder: 'Phone placeholder'
+  use_billing: 'Use Billing'
+  save_and_continue: 'Save and continue'
+  pickup: 'Please, pick up Delivery type!'
+  credit_card: 'Credit Card'
+  shipping_method: 'Shipping Method'
+  max_days: 'Max days'
+  min_days: 'Min days'
+  cart_number: 'Please enter a valid credit card number'
+  cart_name: 'Allow only letters'
+  mm_yy: 'Mons can be from 01 to 12'
+  cart_number: 'Card number:'
+  cart_number_valid: 'Please enter a valid credit card number'
+  name_on_card: 'Name on Card'
+  mm_yy: 'MM / YY'
+  cvv: 'CVV'
+  tooltip: '3-digit security code, usually found on the back of your card. American Express cards has 4-digit code, located on the front'
+  shipments: 'Shipments'
+  edit: 'edit'
+  payment_information: 'Payment Information'
+  place_order: 'Place Order'
+  thanks: 'Thank You for your Order!'
+  has_been_sent_to: 'An order confirmation has been sent to '
+  back_to_store: 'Back to Store'
+  coupon_applied: 'Your coupon was applied!'
